--- a/app/templates/todo-tasks/index.plush.html
+++ b/app/templates/todo-tasks/index.plush.html
@@ -1,77 +1,152 @@
 <nav class="nav color-one pt-4 pb-3">
   <div class="container w-50 d-flex">
-    <h1 class="text-light h2 px-3 my-auto mr-4">ToDo List</h1>
+    <h1 class="text-light h1 px-3 mr-4">
+      <a class="text-white" href="/tasks?check_complet=false">ToDo List</a>
+    </h1>
     <div
       class="h-75 my-auto px-4 b-left d-flex flex-column justify-content-center"
     >
       <div>
-        <p class="text-light my-auto">
+        <p class="text-light my-auto ">
           <span><%= ntasks %></span> Incompleted Tasks
         </p>
       </div>
-      <div><p class="text-light my-0">Fecha</p></div>
+      <div>
+        <p class="mb-0 py-0 text-white" id="date"></p>
+      </div>
     </div>
   </div>
   <div class="container w-50 d-flex justify-content-end">
-    <a class="nav-link text-light my-auto" href="#"
-      ><p class="py-2 fw-lighter"><a href="/">Incomplete Tasks</a></p>
+    <a id="incomplete" class="nav-link text-light" href="tasks?check_complet=false"
+      >Incomplete Tasks
     </a>
-    <a class="nav-link text-light my-auto" href="#"
-      ><p class="py-2"><a href="/tasks/completed">Completed Tasks</a></p></a
+    <a id="completed"
+      class="nav-link text-light"
+      href="tasks?check_complet=true"
+      >Completed Tasks</a
     >
   </div>
 </nav>
 
 <section id="tasks" class="container px-5 mx-auto">
-  <div class="d-flex justify-content-end py-4">
-    <button id="add-task" type="button" class="btn color-one">
-      <span class="py-2 px-4"><a href="/tasks/new">Add Task</a></span>
-    </button>
+  <div class="d-flex justify-content-end py-4 container-addTask"  >
+    <a href="/tasks/new"><button id="add-task" type="button" class="btn color-one d-none">
+      <span class="py-2 px-4 text-white"
+        >Add Task</span
+      >
+    </button></a>
   </div>
   <div>
-    <table class="table">
+    <table class="table table-hover">
       <thead class="table color-two">
         <tr class="text-light">
-          <th scope="col "></th>
-          <th scope="col" colspan="2">Task</th>
+          <th scope="col " class="col-1"></th>
+          <th scope="col" class="col-5">Task</th>
           <th scope="col">Complete by</th>
-          <th class="" scope="col">Actions</th>
+          <th class="text-center" scope="col">Actions</th>
         </tr>
       </thead>
       <tbody class="bg-white">
         <%= for (task) in tasks { %>
-            <%= if (task.CheckComplet == false) { %>
         <tr>
           <th scope="row">
             <div class="form-check text-center">
-              <%= form_for(task, {action: "/tasks/new-task", method: "POST",
-              class: "form"}) { %> <%= f.CheckboxTag("") %> <% } %>
+              <%= form_for(task, {action: tasksUpdateCheckTaskIDPath({task_id:
+              task.ID}), method: "PUT", class: "form"}) { %> <%= if
+              (task.CheckComplet == false) { %>
+              <a id="check"><button type="submit" data-method="PUT" class="btn my-0 py-0">
+                <i class="far fa-check-circle"></i>
+              </button></a>
+              <% } else if (task.CheckComplet == true ) { %>
+              <button type="submit" data-method="PUT" class="btn my-0 py-0 text-danger">
+                <i class="far fa-times-circle"></i>
+              </button>
+              <% } %> <% } %>
             </div>
           </th>
-          <td colspan="2">
-            <span class="text-task"
-              ><a href="/tasks/show/<%= task.ID %>"><%= task.Title %></a></span
-            >
-          </td>
-          <td><%= task.LimitData %></td>
           <td>
-            <a href="/tasks/edit/<%= task.ID %>"
-              ><i id="edit" class="fas fa-pencil-alt mr-3 fa-lg"></i
-            ></a>
-            <a
-              data-method="DELETE"
-              data-confirm="Are you sure you want to remove this task?"
-              href="/tasks/delete/<%= task.ID %>"
+            <span
+              ><a class="text-task" href="/tasks/show/<%= task.ID %>"
+                ><%= task.Title %></a
+              ></span
             >
-              <i id="destroy" class="far fa-trash-alt text-danger fa-lg"></i>
-            </a>
           </td>
-         
+          <td><%= FormatDate(task.LimitData) %></td>
+          <td>
+            <%= if (task.CheckComplet == false) { %>
+              <div class="text-center">
+                <a href="/tasks/edit/<%= task.ID %>"
+                  ><i id="edit" class="fas fa-pencil-alt mr-3 fa-lg"></i
+                ></a>
+                <a 
+                  class="delete"
+                  id="callDelete"
+                  data-id="<%= task.ID %>"
+                  data-toggle="modal"
+                  data-target="#delete"
+                  ><i id="destroy" class="far fa-trash-alt text-danger fa-lg"></i></a>
+              </div>
+            
+          </td>
+          <% } else if (task.CheckComplet == true ) { %>
+         <div class="text-center">
+          <a
+          class="delete"
+          id="callDelete"
+          data-id="<%= task.ID %>"
+          data-toggle="modal"
+          data-target="#delete"
+          >
+            <i id="destroy" class=" far fa-trash-alt text-danger fa-lg"></i>
+          </a>
+         </div>
+            
+          <% } %>
         </tr>
+
         <% } %>
-    <% } %>
-       
       </tbody>
     </table>
-  </div>
+
+    <div
+      class="modal fade"
+      id="delete"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalCenterTitle"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="delete">Delete Task</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to delete this task?
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <label id="deleteTask"></label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>    
 </section>
+ <!--Show task-->
+ 
+ 
