--- a/app/templates/todo-tasks/new-task.plush.html
+++ b/app/templates/todo-tasks/new-task.plush.html
@@ -41,7 +41,7 @@
     <!-- <%= f.CheckboxTag("CheckComplete") %> -->
     <div class="mt-4 d-flex justify-content-end">
         <a href="/tasks?check_complet=false"> <button id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" type="button">Cancel</button></a>
-        <button data-method="PUT" data-confirm="Are you sure you want to update this task?" id="new-task" class="btn color-one py-2 px-3 text-white" type="submit">Create Task</button>
+        <button  class="btn color-one py-2 px-3 text-white" type="submit">Create Task</button>
       </div>
 <% } %>
 </section>
