--- a/app/templates/todo-tasks/index.plush.html
+++ b/app/templates/todo-tasks/index.plush.html
@@ -92,12 +92,10 @@
          <div class="text-center">
           <a
           class="delete"
-          id="callDelete"
           data-id="<%= task.ID %>"
           data-toggle="modal"
-          data-target="#delete"
-          >
-            <i id="destroy" class=" far fa-trash-alt text-danger fa-lg"></i>
+          data-target="#delete">
+            <i  class=" far fa-trash-alt text-danger fa-lg"></i>
           </a>
          </div>
             
@@ -119,7 +117,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="delete">Delete Task</h5>
+            <h5 class="modal-title"  id="delete">Delete Task</h5>
             <button
               type="button"
               class="close"
@@ -147,6 +145,6 @@
     </div>
   </div>    
 </section>
- <!--Show task-->
+
  
  
