--- a/app/templates/todo-tasks/index.plush.html
+++ b/app/templates/todo-tasks/index.plush.html
@@ -117,7 +117,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title"  id="delete">Delete Task</h5>
+            <h5 class="modal-title">Delete Task</h5>
             <button
               type="button"
               class="close"
