Todo List miercoles 18 agosto

--- a/app/assets/css/application.scss
+++ b/app/assets/css/application.scss
@@ -19,6 +19,9 @@ a:hover{
 .color-two{
     background-color: #1D4564;
 }
+.title-task{
+    color: #1D4564;
+}
 
 .text-task{
     color: #73C2DA;
@@ -45,6 +48,9 @@ a:hover{
 }
 .container-addTask{
     height: 86.6px;
+}
+#svg{
+    display: none;
 }
 
 
