--- a/app/templates/partials/navbar.plush.html
+++ b/app/templates/partials/navbar.plush.html
@@ -17,6 +17,11 @@
       </div>
     </div>
     <div class="container w-50 d-flex justify-content-end"> 
+      <a 
+        class="nav-link text-light "
+        href="/user/list"
+        >Users</a
+      >
       <a id="incomplete" class="nav-link text-light  <%= status(params["check_complet"],"true")%>" href="/?check_complet=false"
         >Incomplete Tasks
       </a>
