--- a/app/templates/task/new.plush.html
+++ b/app/templates/task/new.plush.html
@@ -2,20 +2,16 @@
 
 <section id="new-task" class="container px-5 w-75 bg-white mt-5 p-5 ">
     <h3 class="fw-bolder mb-3">New Task</h3>
+     
 <%= form_for(task, {action: "/create", method: "POST", class: "form"}) { %>
     <div class="mb-3 grid-form">
         <%= f.InputTag("Title") %>
-         <%= f.InputTag("LimitData", {type: "datetime-local", min: "2021-01-02T00:00", values: "<%= Date %>"}) %> 
-        
-        <!-- <div>
-          <label for="task-LimitData" class="form-label">Limit Date</label>
-          <input type="date" id="task-LimitData" name="LimitData" aria-label="First name" class="form-control" required>
-        </div>
-         -->
+        <%= f.InputTag("LimitData", {type: "datetime-local", min: "2021-01-02T00:00", value: Date1.Format("2006-01-02 15:04")}) %> 
     </div>
     <%= f.TextArea("Description") %>
+    <%= f.SelectTag("UserID", {label:"Select a User",options: usersList }) %>
     <div class="mt-4 d-flex justify-content-end">
-        <a href="/?check_complet=false"> <button id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" type="button">Cancel</button></a>
+        <a href="/"> <button id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" type="button">Cancel</button></a>
         <button  class="btn color-one py-2 px-3 text-white" type="submit">Create Task</button>
       </div>
 <% } %>
