--- a/app/templates/task/show.plush.html
+++ b/app/templates/task/show.plush.html
@@ -1,6 +1,9 @@
 <%= partial("partials/navbar.plush.html") %>
 <div class="jumbotron mt-5 container w-75">
-    <h1 class="display-4 title-task"><%= task.Title %></h1>
+    <div class="d-flex justify-content-between">
+        <h1 class="display-3 title-task"><%= task.Title %></h1>
+        <p class="lead text-muted"> <%= user.FirstName %> <%= user.LastName %></p>
+    </div>
     <div class="d-flex justify-content-end">
         <p class="lead text-muted"> <%= FormatDate(task.CheckComplet,task.LimitData,task.UpdatedAt) %> </p>
     </div>
