--- a/app/templates/partials/flash.plush.html
+++ b/app/templates/partials/flash.plush.html
@@ -14,12 +14,13 @@
   <div class="col-md-12">
     <%= for (k, messages) in flash { %>
       <%= for (msg) in messages { %>
-        <div class="mb-0 alert alert-<%= k %> fade show" role="alert">
-          <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:"><use xlink:href=" <%= Icon(k) %> "/></svg>
-          <%= msg %>
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+        <div class=" mb-0 alert alert-<%= k %> fade show" role="alert">
+            <svg class="bi flex-shrink-0 me-4 mr-2" width="24" height="24" role="img" aria-label="Info:"><use xlink:href=" <%= Icon(k) %> "/></svg>
+             <span> <%= msg %> </span> 
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
         </div>
       <% } %>
     <% } %>
