--- a/app/assets/css/application.scss
+++ b/app/assets/css/application.scss
@@ -52,6 +52,20 @@ a:hover{
 #svg{
     display: none;
 }
+.w-card{
+    width: 18rem;
+}
+.color-name{
+    color: #73C2DA;
+}
+.logo{
+    color: #1D4564;
+    // font-weight: 700;
+    // font-size: 90px; 
+}
+.logo:hover{
+    color: #1D4564
+}
 
 
 
