--- a/app/templates/user/show.plush.html
+++ b/app/templates/user/show.plush.html
@@ -7,7 +7,7 @@
     <hr class="my-4">
     <div class="d-flex justify-content-between">
         <div >
-            <a class="btn btn-light py-2 px-4 btn-lg text-dark" href="/user/list" role="button">Back to all users</a>
+            <a class="btn btn-light py-2 px-4 btn-lg text-dark" href="/tasks" role="button">Back</a>
         </div>
         <div>
             <a class="btn btn-primary btn-lg px-4" href="/user/edit/<%= user.ID %>" role="button">Edit</a>
