--- a/app/templates/user/list.plush.html
+++ b/app/templates/user/list.plush.html
@@ -1,17 +1,18 @@
 <%= partial("partials/navbar.plush.html") %>
 <%= partial("partials/flash.plush.html") %>
 <section id="tasks" class="container px-5 mx-auto">
-  <div class="d-flex justify-content-between py-4 container-addTask"  >
-    <a href="/user/new" type="button" class="btn color-one <%= addTask(params["check_complet"])%> ">
-      <span class="py-2 px-4 text-white"
-        >Add User<i class="far fa-user ml-3"></i></span
-      >
-    </a>
-    <a href="/new" id="add-task" type="button" class="btn color-one <%= addTask(params["check_complet"])%> ">
-      <span class="py-2 px-4 text-white"
-        ><i class="fas fa-tasks text-white mr-3"></i>Add Task</span
-      >
-    </a>
+  <div class="d-flex justify-content-end py-4 container-addTask"  >
+    
+      <a href="/user/newByAdmin" type="button" class="btn color-one <%= addTask(params["check_complet"])%> ">
+        <span class="py-2 px-4 text-white"
+          >Add User<i class="far fa-user ml-3"></i></span
+        >
+      </a>
+      <a href="/tasks/new" id="add-task" type="button" class="btn color-one ml-3 <%= addTask(params["check_complet"])%> ">
+        <span class="py-2 px-4 text-white"
+          ><i class="fas fa-tasks mr-3"></i>Add Task</span
+        >
+      </a>
    
   </div>
   <div>
