--- a/app/templates/partials/navbar.plush.html
+++ b/app/templates/partials/navbar.plush.html
@@ -18,7 +18,7 @@
     </div>
     <div class="container w-50 d-flex justify-content-end"> 
       <a 
-        class="nav-link text-light <%= roleUser(current_user.Role) %> "
+        class="nav-link text-light <%= roleUser(current_user.Rol) %> "
         href="/user/list"
         >Users</a
       >
