--- a/app/templates/task/index.plush.html
+++ b/app/templates/task/index.plush.html
@@ -7,7 +7,7 @@
       ><%= current_user.FirstName +" "+ current_user.LastName %></a
     ></h3>
     <div class="d-flex justify-content-end py-4"  >
-      <%= if (current_user.Role == "admin" ) {%>
+      <%= if (current_user.Rol == "admin" ) {%>
       <a href="/user/newByAdmin" type="button" class="btn color-one <%= addTask(params["check_complet"])%> ">
         <span class="py-2 px-4 text-white"
           >Add User<i class="far fa-user ml-3"></i></span
