--- a/app/templates/user/newByAdmin.plush.html
+++ b/app/templates/user/newByAdmin.plush.html
@@ -12,7 +12,7 @@
   </div>
   <div class="d-flex justify-content-between">
     <%= f.CheckboxTag("Active", {label: "Enable this user?"}) %>
-    <%= f.SelectTag("Role", {label: "Select a role", options: {"User": "user", "Admin": "admin"}}) %>
+    <%= f.SelectTag("Rol", {label: "Select a role", options: {"User": "user", "Admin": "admin"}}) %>
   </div>
     <div class="mt-4 d-flex justify-content-between">
         <div>
