--- a/app/templates/user/show.plush.html
+++ b/app/templates/user/show.plush.html
@@ -10,7 +10,7 @@
             <a class="btn btn-light py-2 px-4 btn-lg text-dark" href="/tasks" role="button">Back</a>
         </div>
         <div>
-            <a class="btn btn-primary btn-lg px-4" href="/user/edit/<%= user.ID %>" role="button">Edit</a>
+            <a class="btn btn-primary btn-lg px-4" href="/user/edit/<%= user.ID %>" ="button">Edit</a>
         </div>
            
     </div>
