--- a/app/assets/css/application.scss
+++ b/app/assets/css/application.scss
@@ -60,8 +60,8 @@ a:hover{
 }
 .logo{
     color: #1D4564;
-    // font-weight: 700;
-    // font-size: 90px; 
+     font-weight: 500;
+    
 }
 .logo:hover{
     color: #1D4564
