--- a/app/templates/user/list.plush.html
+++ b/app/templates/user/list.plush.html
@@ -1,19 +1,23 @@
 <%= partial("partials/navbar.plush.html") %>
 <%= partial("partials/flash.plush.html") %>
 <section id="tasks" class="container px-5 mx-auto">
-  <div class="d-flex justify-content-end py-4 container-addTask"  >
-    
+  <div class="d-flex justify-content-between container-addTask">
+    <h3 class="my-auto"> 
+      <a class="nav-link title-task" href="/user/show/{<%= current_user.ID %>}"
+      ><%= current_user.FirstName +" "+ current_user.LastName %></a
+    ></h3>
+    <div class="d-flex justify-content-end py-4"  >
+      <%= if (current_user.Rol == "admin" ) {%>
       <a href="/user/newByAdmin" type="button" class="btn color-one <%= addTask(params["check_complet"])%> ">
         <span class="py-2 px-4 text-white"
           >Add User<i class="far fa-user ml-3"></i></span
-        >
+        ><% } %>
       </a>
       <a href="/tasks/new" id="add-task" type="button" class="btn color-one ml-3 <%= addTask(params["check_complet"])%> ">
         <span class="py-2 px-4 text-white"
-          ><i class="fas fa-tasks mr-3"></i>Add Task</span
-        >
+          ><i class="fas fa-tasks mr-3"></i>Add Task</span>
       </a>
-   
+    </div>
   </div>
   <div>
     <table class="table table-hover">
@@ -77,7 +81,7 @@
         </button>
       </div>
       <div class="modal-body">
-        Are you sure you want to delete this user?
+        Are you sure you want to delete this user? Doing so will delete all their assigned tasks
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
