--- a/app/templates/user/newByAdmin.plush.html
+++ b/app/templates/user/newByAdmin.plush.html
@@ -5,20 +5,23 @@
         <%= f.InputTag("FirstName") %>
         <%= f.InputTag("LastName") %>
     </div>
-    <%= f.InputTag("Email") %>
+    <div class="mb-3 grid-form">
+      <%= f.InputTag("Email") %>
+      <%= f.SelectTag("Rol", {label: "Select a role", options: {"User": "user", "Admin": "admin"}}) %>
+    </div>
+   
   <div class="mb-3 grid-form">
     <%=f.InputTag("Password", {type: "password"}) %>
     <%=f.InputTag("PasswordConfirmation", {type: "password"}) %>
   </div>
-  <div class="d-flex justify-content-between">
+  
     <%= f.CheckboxTag("Active", {label: "Enable this user?"}) %>
-    <%= f.SelectTag("Rol", {label: "Select a role", options: {"User": "user", "Admin": "admin"}}) %>
-  </div>
-    <div class="mt-4 d-flex justify-content-between">
-        <div>
+  
+    <div class="mt-4 d-flex justify-content-end">
+        
             <a href="/" id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" >Cancel</a>
             <button  class="btn color-one py-2 px-3 text-white" type="submit">Create User</button>
-        </div>
+        
     </div>
 <% } %>
 </section>
