--- a/app/templates/user/list.plush.html
+++ b/app/templates/user/list.plush.html
@@ -36,11 +36,15 @@
             <div class="form-check text-center">
             <%= form_for(user, {action: userActiveUserIDPath({user_id:
               user.ID}), method: "PUT", class: "form"}) { %> 
-                <%= if (user.Active) { %>
+                <%= if (user.StatusUser == "invited") { %>
+                  <a ><button type="submit" data-method="PUT" class="btn my-0 py-0 check text-success" data-toggle="tooltip" data-placement="left" title="invited user">
+                    <i class="fas fa-blind"></i>
+                  </button></a>
+                <% } else if (user.StatusUser == "activated") { %>
                   <a ><button type="submit" data-method="PUT" class="btn my-0 py-0 check" data-toggle="tooltip" data-placement="left" title="Disable this user">
                     <i class="fas fa-user-alt"></i>
                   </button></a>
-                  <% } else if (!user.Active) { %>
+                  <% } else if (user.StatusUser == "disabled") { %>
                   <button type="submit" data-method="PUT" class="btn my-0 py-0 text-danger check" data-toggle="tooltip" data-placement="left" title="Enable this user">
                     <i class="fas fa-user-slash"></i>
                   </button>
