--- a/app/templates/user/newByAdmin.plush.html
+++ b/app/templates/user/newByAdmin.plush.html
@@ -5,23 +5,13 @@
         <%= f.InputTag("FirstName") %>
         <%= f.InputTag("LastName") %>
     </div>
-    <div class="mb-3 grid-form">
+    <div class="my-3 grid-form">  
       <%= f.InputTag("Email") %>
       <%= f.SelectTag("Rol", {label: "Select a role", options: {"User": "user", "Admin": "admin"}}) %>
-    </div>
-   
-  <div class="mb-3 grid-form">
-    <%=f.InputTag("Password", {type: "password"}) %>
-    <%=f.InputTag("PasswordConfirmation", {type: "password"}) %>
-  </div>
-  
-    <%= f.CheckboxTag("Active", {label: "Enable this user?"}) %>
-  
-    <div class="mt-4 d-flex justify-content-end">
-        
-            <a href="/" id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" >Cancel</a>
-            <button  class="btn color-one py-2 px-3 text-white" type="submit">Create User</button>
-        
+    </div> 
+    <div class="mt-3 d-flex justify-content-end">
+      <a href="/user/list" id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" >Cancel</a>
+      <button  class="btn color-one py-2 px-3 text-white" type="submit">Create User</button>        
     </div>
 <% } %>
 </section>
