--- a/app/templates/user/password.plush.html
+++ b/app/templates/user/password.plush.html
@@ -1,13 +1,13 @@
-<%= form_for(user, {action: "/user/update", method: "POST", class: "form"}) { %>
-  <h1></h1>
-  <div class="container w-50">
+<section id="new-task" class="container centered px-5 w-50 bg-white rounded p-5 ">
+  <h3 class="fw-bolder mb-3">Add Password</h3>
+<%= form_for(user, {action: userUpdatePasswordUserIDPath({user_id: user.ID}), method: "PUT", class: "form"}) { %>
+  <div class="mb-3 grid-form">
       <%=f.InputTag("Password", {type: "password"}) %>
       <%=f.InputTag("PasswordConfirmation", {type: "password"}) %>
   </div>
-  <div class="mt-4 d-flex justify-content-between">
-    <div>
-        <a href="/" id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" >Cancel</a>
-        <button  class="btn color-one py-2 px-3 text-white" type="submit">save Password</button>
-    </div>  
-</div>
-<% }  %>
+  <div class="mt-4 d-flex justify-content-end">
+      <a href="/"> <button id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" type="button">Cancel</button></a>
+      <button data-method="PUT" data-confirm="Are you sure you want to update this task?" id="update-task" class="btn color-one py-2 px-3 text-white" type="submit">Save Password</button>
+    </div>
+<% } %>
+</section>
