--- a/app/templates/task/new.plush.html
+++ b/app/templates/task/new.plush.html
@@ -8,11 +8,14 @@
         <%= f.InputTag("Title") %>
         <%= f.InputTag("LimitData", {type: "datetime-local", min: "2021-01-02T00:00", value: Date1.Format("2006-01-02 15:04")}) %> 
     </div>
-    <%= f.TextArea("Description") %>
-    <%= f.SelectTag("Priority", {label:"Select a priority", options: ["High priority", "Moderate priority", "Low priority"] }) %>
-    <%= if (current_user.Rol == "admin") { %>
-    <%= f.SelectTag("UserID", {label:"Select a User", options: usersList }) %>
-    <% } %>
+    <div class="mb-3"><%= f.TextArea("Description") %></div>
+    <div class="mb-3 grid-form">
+        <%= f.SelectTag("Priority", {label:"Select a priority", options: {"High priority": "a", "Moderate priority": "b", "Low priority": "c"} }) %>
+        <%= if (current_user.Rol == "admin") { %>
+        <%= f.SelectTag("UserID", {label:"Select a User", options: usersList }) %>
+        <% } %>
+    </div>
+   
     <div class="mt-4 d-flex justify-content-end">
         <a href="/tasks/"> <button id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" type="button">Cancel</button></a>
         <button  class="btn color-one py-2 px-3 text-white" type="submit">Create Task</button>
