--- a/app/templates/user/edit.plush.html
+++ b/app/templates/user/edit.plush.html
@@ -6,12 +6,14 @@
         <%= f.InputTag("LastName") %> 
     </div>
     <%= f.InputTag("Email") %>
-    <div class="mb-3 grid-form">
-        <%=f.InputTag("Password", {type: "password"}) %>
-        <%=f.InputTag("PasswordConfirmation", {type: "password"}) %>
-    </div>
+
     <div class="mt-4 d-flex justify-content-end">
+
+        <%= if (current_user.Rol == "admin"){ %>
         <a href="/user/list"> <button id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" type="button">Cancel</button></a>
+        <% } else { %>
+            <a href="/tasks"> <button id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" type="button">Cancel</button></a>
+        <%} %>
         <button data-method="PUT" data-confirm="Are you sure you want to update this task?" id="update-task" class="btn color-one py-2 px-3 text-white" type="submit">Update User</button>
       </div>
 <% } %>
