--- a/app/templates/user/index.plush.html
+++ b/app/templates/user/index.plush.html
@@ -1,5 +1,5 @@
 <%= partial("partials/flash.plush.html") %>
-<div class="container my-5 pt-5 w-75 d-flex align-items-center">
+<div class="container centered w-75 d-flex align-items-center">
     <div class="container">
         <h1 class="display-2"> <a href="/" class="nav-link logo">ToDoList</a></h1>
         <p class="lead ml-4">
@@ -10,11 +10,10 @@
         <div class="w-100 card w-card">
             <div class="card-body mt-3">
                 <%= form_for(user, {action: signinPath(), method: "POST", class: "form"}) { %>
-                    
-                    <%= f.InputTag("Email") %>
-                    <%= f.InputTag("Password", {type: "password"}) %>
+                    <%= f.InputTag("Email",{placeholder: "Email"}) %>
+                    <%= f.InputTag("Password", {placeholder: "Password", type: "password"}) %>
                         <div>
-                            <button  class="btn color-one text-center w-100 py-2 px-3 text-white" type="submit">Log in</button>
+                            <button  class="btn color-one text-center w-100 py-2 px-3 text-white" type="submit">Sign in</button>
                         </div>  
                         <% } %>
                         <hr class="my-4"> 
