TodoList Task createAdmins

--- a/app/templates/task/index.plush.html
+++ b/app/templates/task/index.plush.html
@@ -19,8 +19,8 @@
       </a>
     </div>
   </div>
-
-  <div>
+  
+  
     <table class="table table-hover">
       <thead class="table color-two">
         <tr class="text-light">
@@ -71,7 +71,7 @@
                   ><i id="destroy" class="far fa-trash-alt text-danger fa-lg"></i></a>
               </div>
           </td>
-          <% } else if (task.CheckComplet ) { %>
+          <% } else if (task.CheckComplet) { %>
          <div class="text-center">
           <a
           class="delete"
@@ -87,7 +87,10 @@
         <% } %>
       </tbody>
     </table>
-
+    <div class="d-flex justify-content-center">
+      <%= paginator(paginationTasks) %>
+    </div>
+    <div class="text-center">
     <div
       class="modal fade"
       id="delete"
