--- a/app/templates/user/list.plush.html
+++ b/app/templates/user/list.plush.html
@@ -72,9 +72,15 @@
               </div>
           </td>
         </tr>
+
         <% } %>
       </tbody>
+     
     </table>
+   
+    <div class="text-center d-flex justify-content-center" >
+      <%= paginator(pagination) %>
+    </div>
 <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
