--- a/app/templates/user/newByAdmin.plush.html
+++ b/app/templates/user/newByAdmin.plush.html
@@ -7,7 +7,7 @@
     </div>
     <div class="my-3 grid-form">  
       <%= f.InputTag("Email") %>
-      <%= f.SelectTag("Rol", {label: "Select a role", options: {"User": "user", "Admin": "admin"}}) %>
+      <%= f.SelectTag("Rol", {label: "Select a role", options: {"User": "user", "Admin": "admin"},value:"user"}) %>
     </div> 
     <div class="mt-3 d-flex justify-content-end">
       <a href="/user/list" id="cancel" class="btn btn-light py-2 px-3 mx-3 text-dark" >Cancel</a>
