--- a/app/templates/user/changePassword.plush.html
+++ b/app/templates/user/changePassword.plush.html
@@ -1,6 +1,7 @@
 <section id="new-task" class="container centered px-5 w-50 bg-white rounded p-5 ">
     <h3 class="fw-bolder mb-3">Change Password</h3>
   <%= form_for(user, {action: userUpdatePasswordUserIDPath({user_id: user.ID}), method: "PUT", class: "form"}) { %>
+    <%=f.InputTag("PasswordOld", {placeholder:"Current Password", label: "Current Password",type: "password"}) %>
     <div class="mb-3 grid-form">
         <%=f.InputTag("Password", {type: "password"}) %>
         <%=f.InputTag("PasswordConfirmation", {type: "password"}) %>
