--- a/app/templates/user/index.plush.html
+++ b/app/templates/user/index.plush.html
@@ -16,7 +16,7 @@
                             <button  class="btn color-one text-center w-100 py-2 px-3 text-white" type="submit">Sign in</button>
                         </div>  
                         <% } %>
-                        <div class="text-center mt-3"><a href="#">Did you forget your password?</a></div>
+                        <div class="text-center mt-3"><a href="/user/forgotPassword">Did you forget your password?</a></div>
                         <hr class="mt-3 mb-4"> 
                         <div class="mb-4">
                             <a href="/user/new" class="btn btn-secondary w-100 py-2 text-center">Sign up</a>
